--- a/styles/index.css
+++ b/styles/index.css
@@ -58,14 +58,14 @@
   line-height: 30px;
   height: 30px;
   padding: 0 30px;
-  background-color: #e8eaed;
+  background-color: #F1F3F4;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -ms-box-sizing: border-box;
   border-radius: 15px;
   cursor: pointer;
-  border: 1px solid #e8eaed;
+  border: 1px solid #F1F3F4;
 }
 .modal-page .model-close {
   position: absolute;
@@ -138,12 +138,49 @@
   text-align: right;
   padding-top: 20px;
 }
+.sk-input-buttom.add-buttom {
+  position: relative;
+}
+.sk-input-buttom.add-buttom > div {
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: center;
+  width: 30px;
+  line-height: 30px;
+  cursor: pointer;
+  border-radius: 0 15px 15px 0;
+  border-left: 1px solid #e8eaed;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-input-buttom.add-buttom > div:hover {
+  background-color: #e8eaed;
+}
 input {
   margin: 0;
   width: 100%;
   font-size: 14px;
-  border: 0 solid #e8eaed;
-  background-color: #e8eaed;
+  border: 0 solid #F1F3F4;
+  background-color: #F1F3F4;
   height: 30px;
   line-height: 20px;
   padding: 5px 20px;
@@ -154,6 +191,6 @@ input {
   border-radius: 15px;
 }
 input:focus {
-  border: 0 solid #e8eaed;
+  border: 0 solid #F1F3F4;
   outline: none;
 }
