--- a/less/modal.less
+++ b/less/modal.less
@@ -27,7 +27,7 @@
     line-height: 40px;
     text-align: left;
   }
-  .model-body {
+  .modal-body {
     overflow: auto;
     max-height: 500px;
     padding: 0 30px;
@@ -35,7 +35,7 @@
       padding-bottom: 50px;
     }
   }
-  .model-foot {
+  .modal-foot {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -60,7 +60,7 @@
       border: 1px solid @color-bk;
     }
   }
-  .model-close {
+  .modal-close {
     position: absolute;
     top: 0;
     right: 0;
