--- a/styles/index.css
+++ b/styles/index.css
@@ -28,15 +28,15 @@
   line-height: 40px;
   text-align: left;
 }
-.modal-page .model-body {
+.modal-page .modal-body {
   overflow: auto;
   max-height: 500px;
   padding: 0 30px;
 }
-.modal-page .model-body.foot {
+.modal-page .modal-body.foot {
   padding-bottom: 50px;
 }
-.modal-page .model-foot {
+.modal-page .modal-foot {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -51,7 +51,7 @@
   text-align: center;
   font-size: 0;
 }
-.modal-page .model-foot > div {
+.modal-page .modal-foot > div {
   display: inline-block;
   vertical-align: top;
   font-size: 14px;
@@ -67,7 +67,7 @@
   cursor: pointer;
   border: 1px solid #F1F3F4;
 }
-.modal-page .model-close {
+.modal-page .modal-close {
   position: absolute;
   top: 0;
   right: 0;
@@ -99,7 +99,7 @@
   -ms-transition-timing-function: ease;
   -ms-transition-delay: 0;
 }
-.modal-page .model-close:hover {
+.modal-page .modal-close:hover {
   background-color: rgba(44, 62, 80, 0.2);
 }
 .sk-input-buttom.add-buttom {
@@ -306,6 +306,379 @@
 .paging-page .page-items .page-list > div > div.active,
 .paging-page .page-items .page-list > div > div:hover {
   background-color: rgba(44, 62, 80, 0.28);
+}
+.sk-form {
+  text-align: left;
+}
+.sk-form .sk-form-items .sk-form-row {
+  line-height: 30px;
+  margin: 10px 0;
+  font-size: 0;
+  min-height: 30px;
+  position: relative;
+}
+.sk-form .sk-form-items .sk-form-row.sk-none {
+  display: none;
+}
+.sk-form .sk-form-items .sk-form-row label {
+  width: 80px;
+  display: inline-block;
+  font-size: 14px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.sk-form .sk-form-items .sk-form-row > div {
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date {
+  height: 30px;
+  position: relative;
+  overflow: hidden;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date.active {
+  height: 250px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-input {
+  background-color: #e8eaed;
+  border-radius: 15px;
+  height: 30px;
+  font-size: 14px;
+  line-height: 30px;
+  padding-left: 20px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker {
+  background-color: #fff;
+  z-index: 1100;
+  margin-top: 5px;
+  width: 210px;
+  border: 1px solid #eaedf1;
+  overflow: hidden;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker > div {
+  width: 1050px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker > div.year {
+  transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  -moz-transform: translate(0, 0);
+  -webkit-transform: translate(0, 0);
+  -o-transform: translate(0, 0);
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker > div.month {
+  transform: translate(-210px, 0);
+  -ms-transform: translate(-210px, 0);
+  -moz-transform: translate(-210px, 0);
+  -webkit-transform: translate(-210px, 0);
+  -o-transform: translate(-210px, 0);
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker > div.hours {
+  transform: translate(-630px, 0);
+  -ms-transform: translate(-630px, 0);
+  -moz-transform: translate(-630px, 0);
+  -webkit-transform: translate(-630px, 0);
+  -o-transform: translate(-630px, 0);
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker > div.minutes {
+  transform: translate(-840px, 0);
+  -ms-transform: translate(-840px, 0);
+  -moz-transform: translate(-840px, 0);
+  -webkit-transform: translate(-840px, 0);
+  -o-transform: translate(-840px, 0);
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker > div.day {
+  transform: translate(-420px, 0);
+  -ms-transform: translate(-420px, 0);
+  -moz-transform: translate(-420px, 0);
+  -webkit-transform: translate(-420px, 0);
+  -o-transform: translate(-420px, 0);
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .date-picker > div > div {
+  width: 210px;
+  height: 213px;
+  display: inline-block;
+  vertical-align: top;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .year-picker {
+  text-align: center;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .year-picker .year-items > div {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 30px;
+  width: 70px;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .year-picker .year-items > div:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .year-picker .year-items > div.active {
+  background-color: #e8eaed;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .month-picker .month-items {
+  text-align: center;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .month-picker .month-items > div {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 30px;
+  width: 70px;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .month-picker .month-items > div:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .month-picker .month-items > div.active {
+  background-color: #e8eaed;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .picker-top {
+  font-size: 0;
+  text-align: center;
+  border-bottom: 1px solid #eaedf1;
+  height: 30px;
+  position: relative;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .picker-top > div {
+  font-size: 14px;
+  display: inline-block;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .picker-top > div.i-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .picker-top > div.i-left:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .picker-top > div.i-right {
+  float: right;
+  padding: 0 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .picker-top > div.i-right:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .hours-picker .hours-items {
+  text-align: center;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .hours-picker .hours-items > div {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 30px;
+  width: 35px;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .hours-picker .hours-items > div:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .hours-picker .hours-items > div.active {
+  background-color: #e8eaed;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .minutes-picker .minutes-items {
+  text-align: center;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .minutes-picker .minutes-items > div {
+  display: inline-block;
+  font-size: 14px;
+  line-height: 30px;
+  width: 70px;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .minutes-picker .minutes-items > div:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .minutes-picker .minutes-items > div.active {
+  background-color: #e8eaed;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .day-picker .day-items {
+  font-size: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .day-picker .day-items > div {
+  text-align: center;
+  display: inline-block;
+  vertical-align: top;
+  width: 30px;
+  height: 30px;
+  font-size: 14px;
+  line-height: 30px;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .day-picker .day-items > div:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .day-picker .day-items > div.active {
+  background-color: #e8eaed;
+}
+.sk-form .sk-form-items .sk-form-row .sk-date .day-picker .day-items > div.top:hover {
+  background-color: #fff;
+}
+.sk-form .sk-form-items .sk-form-row .sk-upload {
+  width: 150px;
+  height: 80px;
+  background-color: #e8eaed;
+  border: 5px solid #e8eaed;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+}
+.sk-form .sk-form-items .sk-form-row .sk-upload i {
+  background-image: url('../src/icon/i-upload.svg');
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  background-size: 100%;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.sk-form .sk-form-items .sk-form-row .sk-upload img {
+  max-height: 100%;
+  max-width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.sk-form .sk-form-items .sk-form-row .sk-upload input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-textarea {
+  display: inline-flex;
+}
+.sk-form .sk-form-items .sk-form-row .sk-input {
+  overflow: hidden;
+  height: 30px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio {
+  line-height: 30px;
+  height: 30px;
+  padding-left: 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div {
+  display: inline-block;
+  margin-right: 20px;
+  font-size: 14px;
+  cursor: pointer;
+  position: relative;
+  padding-left: 20px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 14px;
+  height: 14px;
+  transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  display: inline-block;
+  border: 1px solid #2c3e50;
+  vertical-align: top;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div:after {
+  width: 8px;
+  height: 8px;
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  display: inline-block;
+  background-color: #2c3e50;
+  transform: translate(3px, -50%);
+  -ms-transform: translate(3px, -50%);
+  -moz-transform: translate(3px, -50%);
+  -webkit-transform: translate(3px, -50%);
+  -o-transform: translate(3px, -50%);
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  opacity: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div.active:after {
+  opacity: 1;
 }
 input {
   margin: 0;
