--- a/less/index.less
+++ b/less/index.less
@@ -24,3 +24,19 @@ input {
     outline: none;
   }
 }
+
+textarea {
+  margin: 0;
+  width: 100%;
+  padding: 5px 20px;
+  .border-box();
+  border: 0 solid @color-bk;
+  font-size: 14px;
+  line-height: 20px;
+  border-radius: 15px;
+  background-color: @color-bk;
+  &:focus {
+    border: 0 solid @color-main;
+    outline: none;
+  }
+}
