--- a/styles/index.css
+++ b/styles/index.css
@@ -699,3 +699,21 @@ input:focus {
   border: 0 solid #F1F3F4;
   outline: none;
 }
+textarea {
+  margin: 0;
+  width: 100%;
+  padding: 5px 20px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  border: 0 solid #F1F3F4;
+  font-size: 14px;
+  line-height: 20px;
+  border-radius: 15px;
+  background-color: #F1F3F4;
+}
+textarea:focus {
+  border: 0 solid #2c3e50;
+  outline: none;
+}
