--- a/less/modal.less
+++ b/less/modal.less
@@ -1,7 +1,7 @@
 @import "./color";
 @import "./tool";
 
-.modal-page {
+.sk-modal-page {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -21,21 +21,21 @@
     padding: 10px 0;
     overflow: hidden;
   }
-  .modal-title {
+  .sk-modal-title {
     padding-left: 30px;
     font-size: 18px;
     line-height: 40px;
     text-align: left;
   }
-  .modal-body {
+  .sk-modal-body {
     overflow: auto;
     max-height: 500px;
     padding: 0 30px;
-    &.foot {
+    &.sk-modal-body-foot {
       padding-bottom: 50px;
     }
   }
-  .modal-foot {
+  .sk-modal-foot {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -60,7 +60,7 @@
       border: 1px solid @color-bk;
     }
   }
-  .modal-close {
+  .sk-modal-close {
     position: absolute;
     top: 0;
     right: 0;
