--- a/less/color.less
+++ b/less/color.less
@@ -2,6 +2,7 @@
 @color-main-1: rgba(44, 62, 80, 0.28);
 @color-font: #2c3e50;
 @color-solid: #eaedf1;
+@color-bk-menu: #eaedf1;
 @color-bk: #F1F3F4;
 @color-bk-1: #e8eaed;
 
