--- a/less/layout.less
+++ b/less/layout.less
@@ -1,6 +1,62 @@
 @import "./color";
 @import "./tool";
 
-.sk-menu {
-  
+.sk-layout {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  .sk-layout-menu {
+    position: absolute;
+    width: 50px;
+    height: 100%;
+    color: #fff;
+    padding-top: 50px;
+    .transition(all, 0.5s, ease);
+    z-index: 1000;
+    overflow: hidden;
+    background-image: url(../src/img/menu-bk.jpeg);
+
+    &:hover {
+      width: 220px;
+    }
+
+    &>div {
+      padding-left: 50px;
+      height: 40px;
+      line-height: 40px;
+      cursor: pointer;
+      width: 220px;
+      .border-box();
+    }
+  }
+  .sk-layout-content {
+    padding: 20px 20px 20px 250px;
+    width: 100%;
+    height: 100%;
+    .border-box();
+    .transition(all, 0.5s, ease);
+
+    .sk-layout-sub-menu {
+      position: absolute;
+      top: 0;
+      left: 50px;
+      width: 170px;
+      height: 100%;
+      padding-top: 10px;
+      background-color: @color-bk-menu;
+      &>div {
+        padding-left: 20px;
+        line-height: 40px;
+        font-size: 14px;
+        cursor: pointer;
+        .transition(all, 0.5s, ease);
+        &:hover {
+          background-color: #fff;
+        }
+      }
+    }
+  }
 }
