--- a/styles/index.css
+++ b/styles/index.css
@@ -680,6 +680,124 @@
 .sk-form .sk-form-items .sk-form-row .sk-radio > div.active:after {
   opacity: 1;
 }
+.sk-layout {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+.sk-layout .sk-layout-menu {
+  position: absolute;
+  width: 50px;
+  height: 100%;
+  color: #fff;
+  padding-top: 50px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  z-index: 1000;
+  overflow: hidden;
+  background-image: url(../src/img/menu-bk.jpeg);
+}
+.sk-layout .sk-layout-menu:hover {
+  width: 220px;
+}
+.sk-layout .sk-layout-menu > div {
+  padding-left: 50px;
+  height: 40px;
+  line-height: 40px;
+  cursor: pointer;
+  width: 220px;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+}
+.sk-layout .sk-layout-content {
+  padding: 20px 20px 20px 250px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-layout .sk-layout-content .sk-layout-sub-menu {
+  position: absolute;
+  top: 0;
+  left: 50px;
+  width: 170px;
+  height: 100%;
+  padding-top: 10px;
+  background-color: #eaedf1;
+}
+.sk-layout .sk-layout-content .sk-layout-sub-menu > div {
+  padding-left: 20px;
+  line-height: 40px;
+  font-size: 14px;
+  cursor: pointer;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-layout .sk-layout-content .sk-layout-sub-menu > div:hover {
+  background-color: #fff;
+}
 input {
   margin: 0;
   width: 100%;
