--- a/less/index.less
+++ b/less/index.less
@@ -7,6 +7,27 @@
 @import "./paging";
 @import "./form";
 @import "./layout";
+@import "./table";
+
+html {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  font-size: 14px;
+}
+body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: @color-font;
+}
 
 input {
   margin: 0;
