--- a/styles/index.css
+++ b/styles/index.css
@@ -961,6 +961,125 @@
 .sk-layout .sk-layout-content > div .sk-layout-sub-menu > div:hover {
   background-color: #fff;
 }
+.sk-table {
+  text-align: left;
+  display: inline-block;
+}
+.sk-table .sk-table-top {
+  font-size: 0;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  border-radius: 15px;
+  padding: 0 10px;
+  overflow: hidden;
+  height: 30px;
+  border: 0 solid #eaedf1;
+  margin-bottom: 0;
+}
+.sk-table .sk-table-top > div {
+  display: inline-block;
+  vertical-align: top;
+  line-height: 30px;
+  font-size: 14px;
+  padding-left: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.sk-table .sk-table-row {
+  font-size: 0;
+  border: 1px solid #eaedf1;
+  margin-bottom: 10px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  border-radius: 15px;
+  padding: 0 10px;
+  overflow: hidden;
+  height: 30px;
+}
+.sk-table .sk-table-row:hover {
+  background-color: #F1F3F4;
+}
+.sk-table .sk-table-row > div {
+  display: inline-block;
+  vertical-align: top;
+  line-height: 30px;
+  font-size: 14px;
+  padding-left: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.sk-table .sk-table-row > div .none {
+  display: none;
+}
+.sk-table .sk-table-row > div.sk-table-body-operation span {
+  margin-right: 10px;
+  cursor: pointer;
+  display: inline-block;
+  color: #007bbd;
+}
+.sk-table .sk-table-row > div.sk-table-body-operation .disabled {
+  color: #ddd;
+}
+.sk-table .sk-table-row > div.sk-table-body-operation .none {
+  display: none;
+}
+html {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  font-size: 14px;
+}
+body {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #2c3e50;
+}
 input {
   margin: 0;
   width: 100%;
