--- a/less/prompt.less
+++ b/less/prompt.less
@@ -1,7 +1,7 @@
 @import "./color";
 @import "./tool";
 
-.prompt-page {
+.sk-prompt {
   width: 100%;
   height: 100%;
   position: fixed;
@@ -20,15 +20,29 @@
     padding: 10px 20px;
     .translate(-50%, -50%);
 
-    .title {
+    .sk-prompt-title {
       font-size: 16px;
       line-height: 40px;
     }
 
-    .bt-list {
+    .sk-prompt-bt-list {
       font-size: 0;
       text-align: right;
       padding-top: 20px;
+
+      &>div {
+        height: 30px;
+        background-color: @color-bk-1;
+        font-size: 14px;
+        line-height: 28px;
+        padding: 0 24px;
+        margin-right: 10px;
+        border: 1px solid @color-main-1;
+        .border-box();
+        display: inline-block;
+        border-radius: 15px;
+        cursor: pointer;
+      }
     }
   }
 }
