--- a/less/index.less
+++ b/less/index.less
@@ -2,12 +2,13 @@
 @import "./tool";
 
 @import "./modal";
-@import "./inputButton";
+// @import "./inputButton";
 @import "./prompt";
 @import "./paging";
 @import "./form";
 @import "./layout";
 @import "./table";
+@import "./button";
 
 html {
   padding: 0;
