--- a/less/paging.less
+++ b/less/paging.less
@@ -1,7 +1,7 @@
 @import "./color";
 @import "./tool";
 
-.paging-page {
+.sk-paging{
   font-size: 0;
   text-align: left;
   &>div {
@@ -12,13 +12,13 @@
     height: 30px;
     margin-right: 20px;
   }
-  .page-items {
+  .sk-page-items {
     font-size: 0;
     height: 30px;
     .border-box();
 
-    .left-page,
-    .right-page {
+    .sk-page-left-page,
+    .sk-page-right-page {
       display: inline-block;
       font-size: 14px;
       vertical-align: top;
@@ -36,15 +36,15 @@
       }
     }
 
-    .left-page {
+    .sk-page-left-page {
       border-radius: 15px 0 0 15px;
     }
 
-    .right-page {
+    .sk-page-right-page {
       border-radius: 0 15px 15px 0;
     }
 
-    .page-list {
+    .sk-page-page-list {
       display: inline-block;
       vertical-align: top;
       overflow: hidden;
