--- a/styles/index.css
+++ b/styles/index.css
@@ -1104,6 +1104,81 @@
 .sk-button.sk-bt-add {
   font-size: 20px;
 }
+.sk-switch input {
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+.sk-switch span {
+  width: 40px;
+  margin: 0;
+  display: inline-block;
+  position: relative;
+  height: 20px;
+  border: 1px solid #dcdfe6;
+  border-radius: 10px;
+  box-sizing: border-box;
+  background-color: #dcdfe6;
+  cursor: pointer;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-switch span:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  border-radius: 100%;
+  width: 16px;
+  height: 16px;
+  background-color: #fff;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-switch.active span {
+  border-color: #13ce66;
+  background-color: #13ce66;
+}
+.sk-switch.active span:after {
+  left: 100%;
+  margin-left: -17px;
+}
 html {
   padding: 0;
   margin: 0;
