--- a/less/switch.less
+++ b/less/switch.less
@@ -5,6 +5,7 @@
 @color-open: rgb(19, 206, 102);
 
 .sk-switch {
+  height: 30px;
   input {
     width: 0;
     height: 0;
@@ -12,7 +13,7 @@
   }
   span {
     width: 40px;
-    margin: 0;
+    margin: 5px 0;
     display: inline-block;
     position: relative;
     height: 20px;
@@ -26,13 +27,14 @@
     &:after {
       content: "";
       position: absolute;
-      top: 1px;
-      left: 1px;
+      top: 0;
+      left: 0;
       border-radius: 100%;
       width: 16px;
       height: 16px;
       background-color: #fff;
       .transition(all, 0.5s, ease);
+      .translate(1px,1px);
     }
   }
 
@@ -42,8 +44,7 @@
       background-color: @color-open;
 
       &:after {
-        left: 100%;
-        margin-left: -17px;
+        .translate(21px,1px);
       }
     }
   }
