--- a/styles/index.css
+++ b/styles/index.css
@@ -1104,6 +1104,9 @@
 .sk-button.sk-bt-add {
   font-size: 20px;
 }
+.sk-switch {
+  height: 30px;
+}
 .sk-switch input {
   width: 0;
   height: 0;
@@ -1111,7 +1114,7 @@
 }
 .sk-switch span {
   width: 40px;
-  margin: 0;
+  margin: 5px 0;
   display: inline-block;
   position: relative;
   height: 20px;
@@ -1144,8 +1147,8 @@
 .sk-switch span:after {
   content: "";
   position: absolute;
-  top: 1px;
-  left: 1px;
+  top: 0;
+  left: 0;
   border-radius: 100%;
   width: 16px;
   height: 16px;
@@ -1170,14 +1173,22 @@
   -ms-transition-duration: 0.5s;
   -ms-transition-timing-function: ease;
   -ms-transition-delay: 0;
+  transform: translate(1px, 1px);
+  -ms-transform: translate(1px, 1px);
+  -moz-transform: translate(1px, 1px);
+  -webkit-transform: translate(1px, 1px);
+  -o-transform: translate(1px, 1px);
 }
 .sk-switch.active span {
   border-color: #13ce66;
   background-color: #13ce66;
 }
 .sk-switch.active span:after {
-  left: 100%;
-  margin-left: -17px;
+  transform: translate(21px, 1px);
+  -ms-transform: translate(21px, 1px);
+  -moz-transform: translate(21px, 1px);
+  -webkit-transform: translate(21px, 1px);
+  -o-transform: translate(21px, 1px);
 }
 html {
   padding: 0;
