--- a/less/layout.less
+++ b/less/layout.less
@@ -99,6 +99,9 @@
           &.approval {
             background-image: url('../src/icon/i-approval.svg');
           }
+          &.announcement {
+            background-image: url('../src/icon/i-announcement.svg');
+          }
         }
       }
     }
