--- a/less/calendar.less
+++ b/less/calendar.less
@@ -4,7 +4,6 @@
 .sk-calendar-page {
   font-size: 0;
   text-align: left;
-  width: 900px;
   position: relative;
   margin: auto;
 
@@ -14,7 +13,7 @@
     font-size: 14px;
     text-align: center;
     width: 14%;
-    height: 80px;
+    height: 100px;
 
     &.calendar-date {
       display: block;
@@ -34,30 +33,21 @@
       height: 30px;
       line-height: 30px;
       margin-bottom: 10px;
-      border-bottom: 1px dashed rgba(44, 62, 80, 0.18);
+      border-bottom: 1px dashed @color-solid;
     }
     .day {
       line-height: 30px;
+      font-weight: bold;
     }
     .project {
-      font-size: 12px;
-      text-align: left;
+      font-size: 14px;
+      text-align: center;
       &>div {
-        text-align: center;
         cursor: pointer;
         // background-color: rgba(44, 62, 80, 0.18);
-        margin: 3px 15px;
+        margin: 3px 10px;
         padding: 0 10px;
         border-radius: 12px;
-
-        &.error {
-          color: red;
-        }
-      }
-    }
-    &.active {
-      .day {
-        color: red;
       }
     }
   }
